--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,139 @@
-body {
+/*body {*/
+/*  margin: 0;*/
+/*  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
+/*    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+/*    sans-serif;*/
+/*  -webkit-font-smoothing: antialiased;*/
+/*  -moz-osx-font-smoothing: grayscale;*/
+/*}*/
+
+/*code {*/
+/*  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
+/*    monospace;*/
+/*}*/
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.feed {
+  height: 100%;
+  width: 100%;
+  background-image: url("./images/page-background-1.jfif");
+  margin: auto;
+  position: absolute;
 }
+
+.messagewindow {
+  margin: auto;
+  width: 80%;
+  height: 80%;
+  margin-top: 20px;
+  border: 1px solid black;
+  position: relative;
+  background-color: white;
+}
+
+.typebarwrapper {
+  width: 66.7%;
+  height: 10%;
+  min-height: 25px;
+
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+
+  /*overflow: auto;*/
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+
+  background-color: azure;
+  /*background-color: #f4f4f4;*/
+}
+
+.typebar {
+  width: 64%;
+  height: 5%;
+  min-height: 25px;
+
+  position: absolute;
+  bottom: 2.5%;
+  right: 1.35%;
+
+  /*overflow: auto;*/
+  border: 1px solid gray;
+  border-radius: 1.5%;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+
+  background-color: white;
+
+  font: 16px Arial ;
+}
+
+.conversations {
+  height: 95%;
+  width: 33.3%;
+
+  position: absolute;
+  top: 5%;
+  left: 0px;
+  box-sizing: border-box;
+
+  background-color: azure;
+  background-color: #f4f4f4
+}
+
+.conversation {
+  border-top: 0px;
+  border-bottom: 1px dotted #696969;
+  height: 7.5%;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.conversation_name {
+
+}
+
+.messages {
+  height: 85%;
+  width: 66.7%;
+
+  position: absolute;
+  top: 5%;
+  right: 0px;
+  box-sizing: border-box;
+  background-image: url("./images/chat-background.jpg");
+
+}
+
+.message.sent {
+/*  position: absolute;*/
+  position: relative;
+  left: 0px;
+  padding: 1%;
+  min-height: 5%;
+  width: 33.3%;
+  background-color: palegreen;
+  text-align: left;
+  box-sizing: border-box;
+}
+
+.message.received {
+/*  position: absolute;*/
+  padding: 1%;
+  min-height: 5%;
+  width: 33.3%;
+  background-color: antiquewhite;
+  text-align: right;
+  box-sizing: border-box;
+}
+
+
