--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,7 +77,7 @@
   font: 16px Arial ;
 }
 
-.conversations {
+.friendships {
   height: 95%;
   width: 33.3%;
 
@@ -90,16 +90,15 @@
   background-color: #f4f4f4
 }
 
-.conversation {
+.friendship {
+  font-size: 20px;
+  font-family: Arial sans-serif;
   border-top: 0px;
   border-bottom: 1px dotted #696969;
+  min-height: 25px;
   height: 7.5%;
   width: 100%;
   box-sizing: border-box;
-}
-
-.conversation_name {
-
 }
 
 .messages {
