--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap');
 
 * {
   padding: 0;
@@ -125,26 +126,33 @@ h4 {
 
 }
 
-.message.sent {
-/*  position: absolute;*/
-  right: 5px;
-  min-height: 5%;
-  width: 33.3%;
-  background-color: palegreen;
-  text-align: right;
-  box-sizing: border-box;
-  margin-bottom: 5px;
+.message.received {
+  position: relative;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #A8DDFD;
+  width: 200px;
+  height: 50px;
+  text-align: left;
+  font: 400 .9em 'Ubuntu Mono', monospace;;
+  border: 1px solid #97C6E3;
+  border-radius: 10px;
 }
 
-.message.received {
-/*  position: absolute;*/
-  left: 5px;
-  min-height: 5%;
-  width: 33.3%;
-  background-color: antiquewhite;
+.message.sent {
+  position: relative;
+  margin-bottom: 10px;
+  margin-left: calc(100% - 240px);
+  padding: 10px;
+  background-color: #adf896;
+  width: 200px;
+  height: 50px;
   text-align: left;
-  box-sizing: border-box;
-  margin-bottom: 5px;
+  font: 400 .9em 'Ubuntu Mono', monospace;;
+  border: 1px solid #87dfa9;
+  border-radius: 10px;
+
 }
 
 .conversationbar {
@@ -178,4 +186,53 @@ h4 {
 #AddFriend{
   position: relative;
   right: 3000px;
+}
+
+
+.message.received::after{
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 15px solid #A8DDFD;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  top: 0;
+  left: -15px;
+}
+
+.message.received::before{
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 17px solid #97C6E3;
+  border-left: 16px solid transparent;
+  border-right: 16px solid transparent;
+  top: -1px;
+  left: -17px;
+}
+
+.message.sent::after{
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-bottom: 15px solid #9ef896;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  bottom: 0;
+  right: -15px;
+}
+
+.message.sent::before{
+      content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-bottom: 17px solid #96df87;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    bottom: -1px;
+    right: -17px;
 }
